# blvm-protocol

./: .gitignore  ARC_EVALUATION.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INTEGRATION_STATUS.md  OPTIMIZATION_OPPORTUNITIES.md  OPTIMIZATION_VALIDATION.md  README.md  SECURITY.md  TEST_COVERAGE_ANALYSIS.md
.cargo/: config.toml.example
.github/workflows/: ci.yml  coverage.yml  release.yml
docs/: TYPE_USAGE.md
fuzz/: Cargo.toml  README.md  TARGETS.md  init_corpus.sh
fuzz/fuzz_targets/: protocol_address_decode_str.rs  protocol_bip152.rs  protocol_bip155_addrv2_stress.rs  protocol_bip158_match_only.rs  protocol_bip324_handshake.rs  protocol_bip324_transport.rs  protocol_bip70_payment.rs  protocol_block_filters.rs  protocol_cmd_banlist.rs  protocol_cmd_econreg.rs  protocol_cmd_econstatus.rs  protocol_cmd_econveto.rs  protocol_cmd_getbanlist.rs  protocol_commons_banlist_bincode.rs  protocol_commons_getbanlist_bincode.rs  protocol_consensus_block_txs.rs  protocol_consensus_connect_block.rs  protocol_consensus_tx_check.rs  protocol_diff_deser_block_then_check_txs.rs  protocol_diff_deser_tx_check.rs  protocol_edge_checksum_mismatch.rs  protocol_edge_empty_body.rs  protocol_edge_oversize_length.rs  protocol_edge_truncated_frame.rs  protocol_engine_validate_block.rs  protocol_engine_validate_transaction.rs  protocol_fibre_chunk_deserialize.rs  protocol_fibre_chunk_roundtrip.rs  protocol_misc_time_and_params.rs  protocol_network_and_wire.rs  protocol_network_version_payload.rs  protocol_p2p_decode.rs  protocol_service_flags_bitmask.rs  protocol_spam_filter_tx.rs  protocol_spam_input_type.rs  protocol_spam_script_type.rs  protocol_utxo_commitment_from_bytes.rs  protocol_utxo_commitment_roundtrip.rs  protocol_utxo_filteredblock_msg.rs  protocol_utxo_getfilteredblock_msg.rs  (+45 more)
fuzz/src/: lib.rs
src/: address.rs  bip152.rs  bip155_serialization_tests.rs  bip158.rs  commons.rs  config.rs  economic.rs  error.rs  fibre.rs  genesis.rs  lib.rs  network.rs  node_tcp.rs  p2p_commands.rs  p2p_frame.rs  p2p_framing.rs  payment.rs  service_flags.rs  time.rs  v2_transport.rs  validation.rs  varint.rs  wire.rs
src/network/: bip155_tests.rs  v2_transport.rs
src/spam_filter/: mod.rs  script_analyzer.rs
src/utxo_commitments/: data_structures.rs  initial_sync.rs  merkle_tree.rs  mod.rs  network_integration.rs  peer_consensus.rs  verification.rs
src/v2_transport/: elligator_swift.rs
src/wire/: bip155_serialization_tests.rs  frame_header.rs  mod.rs
tests/: address_encoding.rs  bip152_tests.rs  bip158_tests.rs  commons_edge_cases_tests.rs  commons_messages_tests.rs  config_tests.rs  economic_comprehensive_tests.rs  edge_cases_tests.rs  error_handling_tests.rs  feature_registry_tests.rs  features_edge_cases_tests.rs  fibre_protocol_tests.rs  genesis_comprehensive_tests.rs  network_message_tests.rs  network_params_tests.rs  payment_protocol_edge_cases_tests.rs  payment_protocol_tests.rs  protocol_integration.rs  protocol_limits_tests.rs  service_flags_comprehensive_tests.rs  utxo_commitments_consensus_unit.rs  utxo_commitments_hardening.rs  utxo_commitments_proof_verification.rs  utxo_commitments_sync_integration.rs  validation_rules_tests.rs  variants_edge_cases_tests.rs  varint_edge_cases_tests.rs  wire_format_edge_cases_tests.rs  wire_format_tests.rs
tests/common/: mod.rs
