[package]
name = "blvm-protocol"
version = "0.1.3"
edition = "2021"
authors = ["Bitcoin Commons Team"]
description = "Bitcoin Commons BLVM: Bitcoin protocol abstraction layer for multiple variants and evolution"
license = "MIT"
repository = "https://github.com/BTCDecoded/blvm-protocol"
homepage = "https://btcdecoded.org"
documentation = "https://docs.rs/blvm-protocol"
keywords = ["bitcoin", "protocol", "blockchain", "network", "consensus"]
categories = ["cryptography::cryptocurrencies", "network-programming"]
rust-version = "1.82"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Consensus layer - Use crates.io version by default
# To use local path for development, create .cargo/config.toml with:
# [build]
# [replace]
# "blvm-consensus:0.1.6" = { path = "../blvm-consensus" }
blvm-consensus = { path = "../blvm-consensus" }

# Serialization - EXACT VERSIONS for security
serde = { version = "=1.0.228", features = ["derive"] }  # Updated for iroh 0.95 compatibility
serde_json = "=1.0.108"
bincode = "=1.3.3"  # For payment protocol serialization

# Error handling - EXACT VERSIONS for security
anyhow = "=1.0.93"
thiserror = "=1.0.69"

# Cryptography - EXACT VERSIONS for security
sha2 = "=0.10.9"
ripemd = "=0.1.3"
secp256k1 = "=0.28.2"  # For BIP70 payment protocol signatures
hex = "=0.4"  # For hex encoding/decoding
chacha20poly1305 = "=0.10.1"  # For BIP324 v2 encrypted transport
aead = "=0.5.2"  # AEAD trait for ChaCha20Poly1305
getrandom = "=0.2.17"  # For random key generation in BIP324
hkdf = "=0.12.4"  # HKDF key derivation for BIP324

# Address encoding (BIP173/350/351)
bech32 = "=0.9"

# CRC32 for FIBRE packet checksums
crc32fast = "=1.3"

[features]
# Production performance optimizations (passed through from blvm-consensus)
production = ["blvm-consensus/production"]
# UTXO commitments module (passed through from blvm-consensus)
utxo-commitments = ["blvm-consensus/utxo-commitments"]
# CTV (BIP119 CheckTemplateVerify) - passed through from blvm-consensus
ctv = ["blvm-consensus/ctv"]
# BIP324: v2 encrypted transport protocol
bip324 = []
# Sigop counting module (always available, no feature flag needed)
# sigop module is always compiled in blvm-consensus

[dev-dependencies]
tempfile = "=3.8.1"
cargo-tarpaulin = "0.27"
