[package]
name = "blvm-protocol"
version = "0.1.3"
edition = "2021"
authors = ["Bitcoin Commons Team"]
description = "Bitcoin Commons BLVM: Bitcoin protocol abstraction layer for multiple variants and evolution"
license = "MIT"
repository = "https://github.com/BTCDecoded/blvm-protocol"
homepage = "https://btcdecoded.org"
documentation = "https://docs.rs/blvm-protocol"
keywords = ["bitcoin", "protocol", "blockchain", "network", "consensus"]
categories = ["cryptography::cryptocurrencies", "network-programming"]
rust-version = "1.82"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Consensus layer — path in monorepo; published versions: see README (crates.io).
blvm-consensus = { path = "../blvm-consensus" }
# Spec-lock for #[spec_locked] annotations (UTXO commitments 11.4)
blvm-spec-lock = { path = "../blvm-spec-lock", default-features = false, optional = true }

# Serialization - EXACT VERSIONS for security
serde = { version = "=1.0.228", features = ["derive"] }  # Updated for iroh 0.95 compatibility
serde_json = "=1.0.108"
bincode = "=1.3.3"  # For payment protocol serialization

# Error handling - EXACT VERSIONS for security
anyhow = "=1.0.93"
thiserror = "=1.0.69"

# Cryptography - EXACT VERSIONS for security
sha2 = "=0.10.9"
ripemd = "=0.1.3"
# crates.io secp256k1 0.28 (libsecp256k1). blvm-consensus uses blvm-secp256k1 by default.
secp256k1 = { version = "0.28", default-features = true }
hex = "=0.4"  # For hex encoding/decoding
chacha20poly1305 = "=0.10.1"  # For BIP324 v2 encrypted transport
aead = "=0.5.2"  # AEAD trait for ChaCha20Poly1305
getrandom = "=0.2"  # For random key generation in BIP324
hkdf = "=0.12.4"  # HKDF key derivation for BIP324

# Address encoding (BIP173/350/351)
bech32 = "=0.9"

# CRC32 for FIBRE packet checksums
crc32fast = "=1.3"

# UTXO commitments (sparse merkle tree, randomness)
sparse-merkle-tree = { version = "0.6", optional = true }
rand = { version = "=0.8.5", optional = true }
# LruCache for spam filter script type cache (production)
lru = { version = "0.12", optional = true }
# Rayon for parallel UTXO proof verification
rayon = { version = "1.10", optional = true }

[dependencies.smallvec]
version = "1.11"
optional = true
features = ["serde"]

[features]
# Production performance optimizations (passed through from blvm-consensus)
production = ["blvm-consensus/production", "dep:smallvec", "dep:lru", "dep:rayon"]
# UTXO commitments module (implementation in blvm-protocol)
utxo-commitments = ["sparse-merkle-tree", "dep:rand", "dep:blvm-spec-lock"]
# CTV (BIP119 CheckTemplateVerify) - passed through from blvm-consensus
ctv = ["blvm-consensus/ctv"]
# IBD/PERF profiling - passed through from blvm-consensus (profile_log, BATCH, etc.)
profile = ["blvm-consensus/profile"]
# BIP324: v2 encrypted transport protocol
bip324 = []
# UTXO proof verification (optional, for future use)
utxo-proof-verification = []
# Parallel UTXO proof verification (requires rayon)
parallel-verification = ["dep:rayon"]
# Sigop counting module (always available, no feature flag needed)
# sigop module is always compiled in blvm-consensus

[dev-dependencies]
tempfile = "=3.8.1"
cargo-tarpaulin = "0.27"
bytes = "1.11.1"  # RUSTSEC-2026-0007: force upgrade for cargo-tarpaulin transitive dep

# Fast release: opt-level 2 for iteration (matches blvm/blvm-node/blvm-consensus)
[profile.release-fast]
inherits = "release"
opt-level = 2
